[kcmmetadatagenerator] Use QCoreApplication to process args

They might contain non-latin1 letters, so using fromLatin1 is
wrong.

QCoreApplication has logic to handle this correctly on all
platforms, so use that

BUG: 499337